--- a/src/app/modules/deck-builder/library-builder/library-builder.component.html
+++ b/src/app/modules/deck-builder/library-builder/library-builder.component.html
@@ -105,6 +105,6 @@
       (bloodCostSliderChange)="onChangeBloodCostSliderFilter($event)" [(poolCostSlider)]="poolCostSlider"
       (poolCostSliderChange)="onChangePoolCostSliderFilter($event)" [(title)]="title"
       (titleChange)="onChangeTitleFilter($event)" [(cardText)]="cardText"
-      (cardTextChange)="onChangeCardTextFilter($event)" />
+      (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)" />
   </ng-template>
 </ng-container>
