--- a/src/app/shared/components/markdown-help-modal/markdown-help-modal.component.html
+++ b/src/app/shared/components/markdown-help-modal/markdown-help-modal.component.html
@@ -132,7 +132,7 @@
     lower case) followed by a colon and then the discipline abbreviation or name. For example,
     <code>[[discipline:Animalism]]</code> with result in the following:
   </p>
-  <p><i class="vtes-small animalism" title="Animalism"></i></p>
+  <p><i class="vtes vtes-small animalism" title="Animalism"></i></p>
   <p>
     The easiest way to add discipline symbols to your text is by using the button on the
     toolbar and then selecting the discipline of your choice.
@@ -144,7 +144,7 @@
     lower case) followed by a colon and then the clan abbreviation or name. For example,
     <code>[[clan:Gangrel]]</code> with result in the following:
   </p>
-  <p><i class="vtes-small gangrel" title="Gangrel"></i></p>
+  <p><i class="vtes vtes-small gangrel" title="Gangrel"></i></p>
   <p>
     The easiest way to add clans symbols to your text is by using the button on the
     toolbar and then selecting the clan of your choice.
