--- a/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
+++ b/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
@@ -112,6 +112,6 @@
       (capacitySliderChange)="onChangeCapacitySliderFilter($event)" [(title)]="title"
       (titleChange)="onChangeTitleFilter($event)" [(sect)]="sect" (sectChange)="onChangeSectFilter($event)"
       [(taints)]="taints" (taintsChange)="onChangeTaintsFilter($event)" [(cardText)]="cardText"
-      (cardTextChange)="onChangeCardTextFilter($event)" />
+      (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)" />
   </ng-template>
 </ng-container>
