--- a/src/app/modules/deck-builder/library-builder-filter/library-builder-filter.component.html
+++ b/src/app/modules/deck-builder/library-builder-filter/library-builder-filter.component.html
@@ -37,6 +37,25 @@
     </app-clan-filter>
   </div>
   <div class="row g-1 form-floating mt-2">
+    <select class="form-select" id="set" [formControl]="setControl">
+      <option selected></option>
+      <option value="Promo">
+        Promo
+      </option>
+      <option value="POD">
+        {{ t('print_on_demand') }}
+      </option>
+      @for (set of (sets$ | async); track set) {
+      @if(!set.abbrev.startsWith('Promo-')) {
+      <option [value]="set.abbrev">
+        {{ set.fullName }}
+      </option>
+      }
+      }
+    </select>
+    <label for="set">{{ t('set') }}</label>
+  </div>
+  <div class="row g-1 form-floating mt-2">
     <select class="form-select" id="sect" [formControl]="sectControl">
       <option selected></option>
       <option value="none">{{ 'shared.not_required' | transloco }} </option>
@@ -88,6 +107,9 @@
     <div class="col-6 form-check">
       <input class="form-check-input" type="checkbox" [id]="taint" [formControlName]="taint">
       <label class="form-check-label" [for]="taint">
+        @if( taint === 'Flight') {
+        <i class="vtes vtes-small flight"></i>
+        }
         {{ 'vtes.taints.' + taint | translocoFallback: taint | titlecase }}
       </label>
     </div>
