--- a/src/app/shared/components/markdown-textarea/markdown-textarea.component.html
+++ b/src/app/shared/components/markdown-textarea/markdown-textarea.component.html
@@ -4,13 +4,13 @@
       <div ngbDropdown class="btn-group">
         <button type="button" class="btn btn-sm" id="disciplineDropdown" [disabled]="previewDescription()"
           [title]="t('discipline')" ngbDropdownToggle>
-          <i class="vtes-small dominate"></i>
+          <i class="vtes vtes-small dominate"></i>
         </button>
         <div ngbDropdownMenu aria-labelledby="disciplineDropdown">
           <div class="d-flex flex-row flex-wrap">
             @for(discipline of disciplines; track discipline){
             <button class="w-25 d-flex justify-content-center" ngbDropdownItem (click)="onDiscipline(discipline)">
-              <i class="vtes-small" [ngClass]="discipline.icon"></i>
+              <i class="vtes vtes-small" [ngClass]="discipline.icon"></i>
             </button>
             }
           </div>
@@ -19,13 +19,13 @@
       <div ngbDropdown class="btn-group">
         <button type="button" class="btn btn-sm" id="clanDropdown" [disabled]="previewDescription()" [title]="t('clan')"
           ngbDropdownToggle>
-          <i class="vtes-small gangrel"></i>
+          <i class="vtes vtes-small gangrel"></i>
         </button>
         <div ngbDropdownMenu aria-labelledby="clanDropdown">
           <div class="d-flex flex-row flex-wrap">
             @for(clan of clans; track clan){
             <button class="w-25 d-flex justify-content-center" ngbDropdownItem (click)="onClan(clan)">
-              <i class="vtes-small" [ngClass]="clan.icon"></i>
+              <i class="vtes vtes-small" [ngClass]="clan.icon"></i>
             </button>
             }
           </div>
