--- a/src/app/modules/collection/binder-modal/binder-modal.component.html
+++ b/src/app/modules/collection/binder-modal/binder-modal.component.html
@@ -9,6 +9,22 @@
       <div class="mb-3">
         <label for="binderName" class="form-label">{{ t('name') }}</label>
         <input id="binderName" type="text" class="form-control" formControlName="name" />
+        @if (binderName.invalid && (binderName.dirty || binderName.touched)) {
+        <div>
+          @if (binderName.errors?.['required']) {
+          <div class="invalid-feedback d-block">
+            <i class="bi bi-x-circle-fill"></i>
+            {{ 'shared.field_required' | transloco: { field: t('name') } }}
+          </div>
+          }
+          @if (binderName.errors?.['minlength']) {
+          <div class="invalid-feedback d-block">
+            <i class="bi bi-x-circle-fill"></i>
+            {{ t('must_3_characters') }}
+          </div>
+          }
+        </div>
+        }
       </div>
       <div class="input-group mb-3">
         <label for="binderIcon" class="input-group-text">
@@ -48,7 +64,7 @@
     <button type="button" class="btn btn-secondary" (click)="activeModal.dismiss('Cross click')">
       {{ 'shared.cancel' | transloco }}
     </button>
-    <button type="button" class="btn btn-primary" (click)="onSave()">
+    <button type="button" class="btn btn-primary" (click)="onSave()" [disabled]="loading$ | async">
       {{ t('save') }}
     </button>
   </div>
