--- a/src/app/modules/collection/collection-cards-list/collection-card/collection-card.component.html
+++ b/src/app/modules/collection/collection-cards-list/collection-card/collection-card.component.html
@@ -1,5 +1,5 @@
 @if(isCrypt()){
-<app-crypt [card]="{id: cardId(), number: 0}" [background]="false"></app-crypt>
+<app-crypt [card]="{id: cardId(), number: 0}" [background]="false" [setAbbrev]="setAbbrev()"></app-crypt>
 }@else {
-<app-library [card]="{id: cardId(), number: 0}" [background]="false"></app-library>
+<app-library [card]="{id: cardId(), number: 0}" [background]="false" [setAbbrev]="setAbbrev()"></app-library>
 }
