feat: Add move card functionality to collection module

--- a/src/app/modules/collection/binder/binder.component.html
+++ b/src/app/modules/collection/binder/binder.component.html
@@ -17,6 +17,9 @@
     }
     {{ binder.name }}
   </h1>
+  <p class="text-muted">
+    {{ binder.description }}
+  </p>
   @if(!isPublic){
   <div class="d-flex justify-content-between mb-3">
     <div>
