--- a/src/app/modules/collection/collection-cards-list/collection-cards-list.component.scss
+++ b/src/app/modules/collection/collection-cards-list/collection-cards-list.component.scss
@@ -16,6 +16,10 @@ table tr {
   height: 50px;
 }
 
+.table-progress {
+  height: min-content !important;
+}
+
 th[appSortable] {
   cursor: pointer;
   user-select: none;
