--- a/src/app/modules/collection/card-modal/card-modal.component.html
+++ b/src/app/modules/collection/card-modal/card-modal.component.html
@@ -1,6 +1,12 @@
 <ng-container *transloco="let t; read: 'collection'">
   <div class="modal-header">
-    <h4 class="modal-title">{{ t('add_to_collection') }}</h4>
+    <h4 class="modal-title">
+      @if(cardCollectionId){
+      {{ t('edit_card') }}
+      }@else{
+      {{ t('add_to_collection') }}
+      }
+    </h4>
     <button type="button" class="btn-close" [attr.aria-label]="'shared.close' | transloco"
       (click)="activeModal.dismiss('Cross click')"></button>
   </div>
