--- a/src/app/modules/collection/collection-cards-list/collection-cards-list.component.html
+++ b/src/app/modules/collection/collection-cards-list/collection-cards-list.component.html
@@ -4,8 +4,11 @@
     <div class="col-12 col-md d-flex justify-content-center justify-content-md-start">
       <select id="set" class="form-select w-auto" [formControl]="setFormControl">
         <option [value]="null" [ngValue]="null">{{ t('any_set') }}</option>
+        <option [value]="0" [ngValue]="0">{{ t('none') }}</option>
         @for(set of sets$ | async; track set) {
-        <option [value]="set.id">{{ set.fullName }}</option>
+        <option [value]="set.id" [ngValue]="set.id">
+          {{ set.fullName }} <span class="text-muted">'{{ set.releaseDate | date:'yy'}}</span>
+        </option>
         }
       </select>
     </div>
